fixed white box for dark mode calendar search refs #23107

--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/views/search/searchList.less
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/views/search/searchList.less
@@ -122,7 +122,11 @@
         select {}
     }
     /* ADVANCED SEARCH INFO */
-    &__adv-search-info {}
+    &__adv-search-info {
+		background: @bg-content-box;
+		color: @fg-content-box;
+		border: @border;
+	}
     &__adv-search-info-back {}
     /* HITS */
     &__hits {}
